samples/_failures_safe/1761242141_6eec74_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ebf9e1c3.c: In function ‘print_compression_info’:
./samples/SAFE/__tmp_ebf9e1c3.c:145:12: error: missing terminating " character
  145 |     printf("  Checksum: 0x
      |            ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ebf9e1c3.c:145:5: error: expected expression at end of input
  145 |     printf("  Checksum: 0x
      |     ^~~~~~
./samples/SAFE/__tmp_ebf9e1c3.c:145:5: error: expected declaration or statement at end of input
